PC shake, random fix to admin page, alignment of logo on club/tourney games

--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -1240,7 +1240,7 @@ p.rune {
   display: flex;
   position: relative;
   left: -24px;
-  width: 100vw;
+  width: 98vw;
   max-width: 560px;
   min-height: 32px;
   padding: 15px 45px;
